# signalscore

./: .firebaserc  .gitignore  README.md  firebase.json
execution/backend/: .coverage  Dockerfile  alembic.ini  cleanup_alembic.py  debug_google.py  deep_analysis_results.json  entrypoint.sh  fix_google_data.py  pyproject.toml  pytest.ini  validation_sprint_results.json
execution/backend/alembic/: env.py
execution/backend/alembic/versions/: 001_initial_companies.py  002_domain_aliases.py  003_rename_scoring_categories.py  129ffb353b6b_add_verification_status_to_company_.py  604b561c99c9_add_discovery_trace_to_company.py  b259375a2daf_add_score_model.py
execution/backend/app/: main.py
execution/backend/app/core/: config.py  database.py
execution/backend/app/data/: pilot_scores.json
execution/backend/data/: ground_truth_seed.json  signalscore.db
execution/backend/scripts/: check_persistence.py  deep_job_analysis.py  evaluate_improvements.py  push_scores.py  rescore_company.py  research_prototype.py  run_benchmark.py  seed_ui_test.py  story_4_3_evaluation_report.json  validation_sprint.py
execution/backend/tests/: quick_scraper_test.py  test_admin_api.py  test_async_scoring.py  test_ats_detector.py  test_companies_api.py  test_discovery.py  test_discovery_scanner.py  test_domain_aliases.py  test_domain_rollup.py  test_emergency_crawl.py  test_google_bug.py  test_jd_weighting.py  test_labels_and_search.py  test_on_demand_scoring.py  test_push_scores.py  test_scoring_trace.py  test_scrapers.py  test_sources.py  test_synthesis.py  test_url_validation.py
(+266 files in other folders)
