[project]
name = "signalscore-backend"
version = "0.1.0"
description = "SignalScore API - AI Readiness scoring backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    # Scraping dependencies
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "webdriver-manager>=4.0.0",
    "googlesearch-python>=1.2.0",
    "tldextract>=5.0.0",
    # Postgres driver (pure Python, no libpq needed)
    "pg8000>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
